%% title: 发送消息(对照,面板未驱动)
%%{init: {
  'theme': 'base',
  'htmlLabels': false,
  'state': { 'htmlLabels': false },
  'flowchart': { 'htmlLabels': false },
  'themeVariables': {
    'primaryColor': '#ECECFF',
    'primaryBorderColor': '#D5D5FF',
    'primaryTextColor': '#000000',
    'lineColor': '#757575',
    'textColor': '#212121',
    'edgeLabelBackground': 'transparent',
    'noteBkgColor': '#FFF6B8',
    'noteBorderColor': '#E4C800',
    'noteTextColor': '#5C5100',
    'tertiaryColor': '#f5f5f5',
    'background': '#FFFFFF'
  }
}}%%
stateDiagram-v2
    [*] --> pending : 入库并入队(同 peer 串行)
    pending --> done : 发送成功
    pending --> rejected : 对方拒绝
    pending --> failed : 离线(不触网) / busy / 超时 / 证书不匹配 / 网络错误
